force-app/main/default/objects/Vinculo_consumivel_requerido__c/Vinculo_consumivel_requerido__c.object-meta.xml
<CustomObject>
    <label>Vínculo consumível requerido</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vinculo consumíveis requeridos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>