force-app/main/default/objects/Vinculo_consumivel_requerido__c/fields/Ativo_do_comodato__c.field-meta.xml
<CustomField>
    <fullName>Ativo_do_comodato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo do comodato</label>
    <referenceTo>Produto_da_demonstracao__c</referenceTo>
    <relationshipLabel>Vinculo consumíveis requeridos</relationshipLabel>
    <relationshipName>Vinculo_consum_veis_requeridos</relationshipName>
    <type>Lookup</type>
</CustomField>