force-app/main/default/objects/Vinculo_consumivel_requerido__c/fields/Codigo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_produto__c</fullName>
    <label>Código do produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>