force-app/main/default/objects/Vinculo_consumivel_requerido__c/fields/Consum_vel_de_comodato__c.field-meta.xml
<CustomField>
    <fullName>Consum_vel_de_comodato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumível de comodato</label>
    <referenceTo>Consumivel_de_comodato__c</referenceTo>
    <relationshipLabel>Vinculo consumíveis requeridos</relationshipLabel>
    <relationshipName>Vinculo_consum_veis_requeridos</relationshipName>
    <type>Lookup</type>
</CustomField>