force-app/main/default/objects/Vinculo_consumivel_requerido__c/fields/Insumo__c.field-meta.xml
<CustomField>
    <fullName>Insumo__c</fullName>
    <formula>Consum_vel_de_comodato__r.Nome_do_produto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insumo</label>
    <type>Text</type>
</CustomField>