force-app/main/default/objects/Vinculo_consumivel_requerido__c/fields/NS_do_Ativo__c.field-meta.xml
<CustomField>
    <fullName>NS_do_Ativo__c</fullName>
    <formula>Ativo_do_comodato__r.Numero_de_serie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS do Ativo</label>
    <type>Text</type>
</CustomField>